--- a/client/src/Components/Pages/Settings/Settings.css
+++ b/client/src/Components/Pages/Settings/Settings.css
@@ -6,21 +6,16 @@
   justify-content: center;
   justify-items: center;
 
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  background: rgba(0, 0, 0, 0.4);
-  min-height: 100%;
+
+  min-height: 100vh;
   min-width: 100%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  top: 0;
 }
 
 .settings-card {
-  position: relative;
-
+  justify-self: center;
+  align-self: center;
   width: 60%;
   height: 60%;
   text-align: center;
@@ -63,6 +58,7 @@
   justify-content: start;
 }
 .row-center {
+  margin-bottom: 20px;
   margin-top: 15px;
   width: 100%;
   display: flex;
@@ -81,4 +77,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.slider-view {
+  margin-top: 50px;
 }
