--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,15 @@
 .App {
   text-align: center;
-  scroll-behavior: smooth;
   height: 100vh;
   min-height: 100vh;
   width: 100%;
-  background: #242424;
-
+  background: #131212;
+}
+* {
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 .App-logo {
