--- a/client/src/Components/Pages/Registeration/Registeration.css
+++ b/client/src/Components/Pages/Registeration/Registeration.css
@@ -1,3 +1,15 @@
+.registeration-container {
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+
+  padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+  box-sizing: content-box; /* So the width will be 100% + 17px */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #login-card {
   position: relative;
   top: calc(50vh - 144px);
@@ -19,8 +31,6 @@
   display: inline-block;
 }
 
-
-
 .facebook {
   background-color: #3b5998;
 }
@@ -29,7 +39,6 @@
   background-color: #4285f4;
   color: white;
 }
-
 
 /* paralax
 .containerPage {
