--- a/client/src/Components/Pages/Gallery/Gallery.css
+++ b/client/src/Components/Pages/Gallery/Gallery.css
@@ -1,6 +1,14 @@
-.grid-container {
+.gallery-container {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.grid-container {
+  height: 100%;
+  width: 80%;
   display: grid;
   align-items: center;
   justify-content: center;
@@ -14,8 +22,9 @@
 
 .grid-item {
   color: white;
-  width: 90%;
-  height: 90%;
+  width: 80%;
+  margin: 5px;
+  height: auto;
   -webkit-transition: -webkit-transform 0.4s;
   transition: transform 0.4s;
   border-radius: 20px;
@@ -27,8 +36,14 @@
 
 .grid-item img {
   width: 100%;
-  height: 100%;
+  height: auto;
   border-radius: 20px;
+}
+
+.grid-item:nth-child(1) {
+  grid-column: 3;
+  grid-row: 2 / 4;
+  width: 70%;
 }
 
 .grid-item:nth-child(2) {
@@ -36,6 +51,7 @@
   grid-row: 2 / 4;
 }
 .grid-item:nth-child(5) {
+  width: 60%;
   grid-column: 1 / 3;
   grid-row: 1 / 3;
 }
