--- a/client/src/Components/Pages/Home/Home.css
+++ b/client/src/Components/Pages/Home/Home.css
@@ -52,7 +52,7 @@
   left: 0px;
   top: 0px;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   min-height: 100%;
   min-width: 100%;
   display: flex;
