--- a/client/src/Components/Pages/Home/Home.css
+++ b/client/src/Components/Pages/Home/Home.css
@@ -52,13 +52,15 @@
   left: 0px;
   top: 0px;
   width: 100%;
-  height: 100vh;
+  height: auto;
   min-height: 100%;
   min-width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-top: 50px;
+  padding-bottom: 80px;
 
   padding-bottom: 50px;
 }
