--- a/client/src/Components/Customs/BubbleFloating/BubbleFloating.css
+++ b/client/src/Components/Customs/BubbleFloating/BubbleFloating.css
@@ -1,15 +1,16 @@
 .bubble-container {
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
   display: flex;
   position: fixed;
+
   top: 0;
   left: 0;
   transform: translateZ(0);
   overflow: hidden;
   object-fit: cover;
-  background: #131212;
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .bubble-container li {
