--- a/client/src/Components/Pages/Home/Home.css
+++ b/client/src/Components/Pages/Home/Home.css
@@ -16,6 +16,7 @@
 }
 
 .appbar {
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   margin-top: 0px;
   padding-top: 60px;
@@ -25,14 +26,14 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  color: azure;
-  z-index: 1;
+  color: rgb(255, 255, 255);
+  z-index: 2;
 }
 .appbar ul {
   display: flex;
   flex-direction: row;
   list-style: none;
-  color: azure;
+  color: rgb(255, 255, 255);
   font-size: 20px;
 }
 .appbar li {
@@ -41,9 +42,13 @@
 .appbar a {
   color: white;
   text-decoration: none;
+  font-size: 30px;
+  font-weight: 700;
 }
 
 .section {
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
   color: #fff;
   margin: 0px;
   padding: 0px;
@@ -59,12 +64,13 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px;
+  padding-top: 150px;
   padding-bottom: 80px;
 
   padding-bottom: 50px;
 }
 .section h1 {
+  z-index: 1;
   color: #fff;
   margin-bottom: 50px;
   font-size: 50px;
@@ -72,8 +78,22 @@
 }
 
 .section p {
+  z-index: 1;
   color: #fff;
   font-size: 30px;
   font-weight: 1000;
   margin-top: 20px;
+}
+.video-large {
+  position: fixed;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  min-height: 100%;
+  min-width: 100%;
 }
