--- a/client/src/Components/Pages/Settings/Settings.css
+++ b/client/src/Components/Pages/Settings/Settings.css
@@ -14,12 +14,13 @@
 }
 
 .settings-card {
+  position: absolute;
   justify-self: center;
   align-self: center;
   width: 60%;
   height: 60%;
   text-align: center;
-  background: rgba(177, 90, 90, 0.425);
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 2px;
 }
 .video-large {
